Fix #136, overflow of color selector at bottom of gui

--- a/src/dat/gui/_structure.scss
+++ b/src/dat/gui/_structure.scss
@@ -89,7 +89,7 @@ $button-height: 20px;
 
     float: right;
     margin-right: 15px;
-    overflow-x: hidden;
+    overflow-y:visible;
 
     &.has-save > ul {
 
